refactor: AuthChannelInterceptor 웹소켓 인증 처리