@@ -1,8 +1,8 @@
 package com.sprint.mission.discodeit.global.config.security.interceptor;
 
 import com.sprint.mission.discodeit.global.config.security.jwt.JwtProvider;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.messaging.Message;
 import org.springframework.messaging.MessageChannel;
 import org.springframework.messaging.simp.stomp.StompCommand;
@@ -10,16 +10,17 @@ import org.springframework.messaging.simp.stomp.StompHeaderAccessor;
 import org.springframework.messaging.support.ChannelInterceptor;
 import org.springframework.messaging.support.MessageHeaderAccessor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
+import java.util.List;
 
 @Component
 @Slf4j
+@RequiredArgsConstructor
 public class AuthChannelInterceptor implements ChannelInterceptor {
 
-    @Autowired
-    private JwtProvider jwtProvider;
+    private final JwtProvider jwtProvider;
 
     @Override
     public Message<?> preSend(Message<?> message, MessageChannel channel) {
@@ -41,7 +42,7 @@ public class AuthChannelInterceptor implements ChannelInterceptor {
                 if (jwtProvider.validateAccessToken(token)) {
                     String username = jwtProvider.extractSubject(token);
                     accessor.setUser(new UsernamePasswordAuthenticationToken(
-                            username, null, Collections.emptyList()
+                            username, null, List.of(new SimpleGrantedAuthority("ROLE_USER"))
                     ));
                 } else {
                     throw new IllegalArgumentException("AuthChannelInterceptor, 유효하지 않은 토큰입니다.");
